# nardini-online

./: .env.example  .gitignore  GUIDE.md  README.md  pyproject.toml
data/fasta_inputs/: Halophile-pHtolerant-yeast-first16.fasta
frontend/: .gitignore  README.md  index.html  index.tsx  package.json
frontend/src/: App.tsx
frontend/src/components/: SequencesTable.tsx  StatusBadge.tsx
frontend/src/types/: schemas.ts
notebooks/: colab_run_fasta.ipynb  demo.ipynb  demo_new.ipynb  nardini_colab.ipynb  nardini_jupyter.ipynb  parallel_run_fasta.ipynb  single_container_run_fasta.ipynb
src/: config.py  core.py  modal_backend.py  modal_backend_stable.py  schemas.py  utils.py
src/app/: backend.py  common.py
src/backend_utils/: utils.py
src/fastapi_utils/: utils.py
src/shared_utils/: file_utils.py  schemas.py  utils.py
src/single-container-app/: modal_backend_stable.py
